tests/aster/x/mochi/rosetta/bifid-cipher.error
error[A007]: map entry type mismatch
  --> /workspace/mochi/tests/rosetta/x/Mochi/bifid-cipher.mochi:18:22

 18 |   return {"e": emap, "d": dmap}
    |                      ^

help:
  Ensure map keys and values share types
